scripts/nullness/annotator/urlc3ca8aa24b_davidsan_rivercityransom_tgz-pJ8-rivercityransom_dirtytests_GangsterTestMainJ8.txt
../annotator/urlc3ca8aa24b_davidsan_rivercityransom_tgz-pJ8-rivercityransom_dirtytests_GangsterTestMainJ8/src/rivercityransom/impl/BlocImpl.java:6: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/urlc3ca8aa24b_davidsan_rivercityransom_tgz-pJ8-rivercityransom_dirtytests_GangsterTestMainJ8/src/rivercityransom/impl/GestionCombatImpl.java:19: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/urlc3ca8aa24b_davidsan_rivercityransom_tgz-pJ8-rivercityransom_dirtytests_GangsterTestMainJ8/src/rivercityransom/impl/BlocImpl.java:24: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class BlocImpl
../annotator/urlc3ca8aa24b_davidsan_rivercityransom_tgz-pJ8-rivercityransom_dirtytests_GangsterTestMainJ8/src/rivercityransom/impl/GestionCombatImpl.java:106: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class GestionCombatImpl
4 errors
